--- a/content_cn.html
+++ b/content_cn.html
@@ -27,9 +27,9 @@
 				<li>
 					<strong>库主机：</strong>
 					<ul>
-						<li><strong>dxpool</strong> <input class="selectMe" value="hns.ss.dxpool.com" readonly="readonly" size=17 /> 端口： <input class="selectMe" value="3008" readonly="readonly" size=4 /> <br />用户名： registered_username.workerName <br /> 密码： anything</li>
-						<li><strong>f2pool</strong> <input class="selectMe" value="hns.f2pool.com" readonly="readonly" size="14"> 端口： <input class="selectMe" value="6000" readonly="readonly" size="4"> <br/>用户名：wallet.workerName <br/> 密码：anything</li>
-						<li><strong>hnspool</strong> <input class="selectMe" value="stratum-us.hnspool.com" readonly="readonly" size="23"> 端口： <input class="selectMe" value="3001" readonly="readonly" size="4"> <br/>用户名：registeredUsername <br/> 密码：registeredUserPassword</li>
+						<li><strong>DXPool</strong> <input class="selectMe" value="hns.ss.dxpool.com" readonly="readonly" size=17 /> 端口： <input class="selectMe" value="3008" readonly="readonly" size=4 /> <br />用户名： registered_username.workerName <br /> 密码： anything</li>
+						<li><strong>F2Pool</strong> <input class="selectMe" value="hns.f2pool.com" readonly="readonly" size="14"> 端口： <input class="selectMe" value="6000" readonly="readonly" size="4"> <br/>用户名：wallet.workerName <br/> 密码：anything</li>
+						<li><strong>HNSPool</strong> <input class="selectMe" value="stratum+tcp://stratum-us.hnspool.com" readonly="readonly" size="23"> 端口： <input class="selectMe" value="3001" readonly="readonly" size="4"> <br/>用户名：registeredUsername <br/> 密码：registeredUserPassword</li>
 					</ul>
 				</li>
 			</ul>
