--- a/content_de.html
+++ b/content_de.html
@@ -27,9 +27,9 @@
 				<li>
 					<strong>Pool Hosts:</strong>
 					<ul>
-						<li><strong>dxpool</strong> <input class="selectMe" value="hns.ss.dxpool.com" readonly="readonly" size=17 /> Port: <input class="selectMe" value="3008" readonly="readonly" size=4 /> <br />Nutzername: registered_username.workerName <br /> Passwort: anything</li>
-						<li><strong>f2pool</strong> <input class="selectMe" value="hns.f2pool.com" readonly="readonly" size=14 /> Port: <input class="selectMe" value="6000" readonly="readonly" size=4 /> <br />Nutzername: wallet.workerName <br /> Passwort: anything</li>
-						<li><strong>hnspool</strong> <input class="selectMe" value="stratum-us.hnspool.com" readonly="readonly" size=23 /> Port: <input class="selectMe" value="3001" readonly="readonly" size=4 /> <br />Nutzername: registeredUsername <br /> Passwort: registeredUserPassword</li>
+						<li><strong>DXPool</strong> <input class="selectMe" value="hns.ss.dxpool.com" readonly="readonly" size=17 /> Port: <input class="selectMe" value="3008" readonly="readonly" size=4 /> <br />Nutzername: registered_username.workerName <br /> Passwort: anything</li>
+						<li><strong>F2Pool</strong> <input class="selectMe" value="hns.f2pool.com" readonly="readonly" size=14 /> Port: <input class="selectMe" value="6000" readonly="readonly" size=4 /> <br />Nutzername: wallet.workerName <br /> Passwort: anything</li>
+						<li><strong>HNSPool</strong> <input class="selectMe" value="stratum+tcp://stratum-us.hnspool.com" readonly="readonly" size=23 /> Port: <input class="selectMe" value="3001" readonly="readonly" size=4 /> <br />Nutzername: registeredUsername <br /> Passwort: registeredUserPassword</li>
 					</ul>
 				</li>
 			</ul>
