--- a/content_es.html
+++ b/content_es.html
@@ -27,9 +27,9 @@
 				<li>
 					<strong>Anfitriones del grupo:</strong>
 					<ul>
-						<li><strong>dxpool</strong> <input class="selectMe" value="hns.ss.dxpool.com" readonly="readonly" size=17 /> puerto: <input class="selectMe" value="3008" readonly="readonly" size=4 /> <br />nombre de usuario: registered_username.workerName <br /> contraseña: anything</li>
-						<li><strong>f2pool</strong> <input class="selectMe" value="hns.f2pool.com" readonly="readonly" size="14"> puerto: <input class="selectMe" value="6000" readonly="readonly" size="4"> <br/>nombre de usuario: billetera.nombreTrabajador <br/> contraseña: cualquiera</li>
-						<li><strong>hnspool</strong> <input class="selectMe" value="stratum-us.hnspool.com" readonly="readonly" size="23"> puerto: <input class="selectMe" value="3001" readonly="readonly" size="4"> <br/>nombre de usuario: nombreUsuarioRegistrado <br/> contraseña: contraseñaUsuarioRegistrado</li>
+						<li><strong>DXPool</strong> <input class="selectMe" value="hns.ss.dxpool.com" readonly="readonly" size=17 /> puerto: <input class="selectMe" value="3008" readonly="readonly" size=4 /> <br />nombre de usuario: registered_username.workerName <br /> contraseña: anything</li>
+						<li><strong>F2Pool</strong> <input class="selectMe" value="hns.f2pool.com" readonly="readonly" size="14"> puerto: <input class="selectMe" value="6000" readonly="readonly" size="4"> <br/>nombre de usuario: billetera.nombreTrabajador <br/> contraseña: cualquiera</li>
+						<li><strong>HNSPool</strong> <input class="selectMe" value="stratum+tcp://stratum-us.hnspool.com" readonly="readonly" size="23"> puerto: <input class="selectMe" value="3001" readonly="readonly" size="4"> <br/>nombre de usuario: nombreUsuarioRegistrado <br/> contraseña: contraseñaUsuarioRegistrado</li>
 					</ul>
 				</li>
 			</ul>
