--- a/content_ru.html
+++ b/content_ru.html
@@ -27,9 +27,9 @@
 				<li>
 					<strong>Адреса пулов:</strong>
 					<ul>
-						<li><strong>dxpool</strong> <input class="selectMe" value="hns.ss.dxpool.com" readonly="readonly" size=17 /> порт: <input class="selectMe" value="3008" readonly="readonly" size=4 /> <br />Имя пользователя: зарегистрированноеИмяПользователя.имяПользователя <br /> Пароль: любой</li>
-						<li><strong>f2pool</strong> <input class="selectMe" value="hns.f2pool.com" readonly="readonly" size=14 /> порт: <input class="selectMe" value="6000" readonly="readonly" size=4 /> <br />Имя пользователя: Адрес.имяПользователя <br /> Пароль: любой</li>
-						<li><strong>hnspool</strong> <input class="selectMe" value="stratum-us.hnspool.com" readonly="readonly" size=23 /> порт: <input class="selectMe" value="3001" readonly="readonly" size=4 /> <br />Имя пользователя: зарегистрированноеИмяПользователя <br /> Пароль: Зарегистрированный пароль</li>
+						<li><strong>DXPool</strong> <input class="selectMe" value="hns.ss.dxpool.com" readonly="readonly" size=17 /> порт: <input class="selectMe" value="3008" readonly="readonly" size=4 /> <br />Имя пользователя: зарегистрированноеИмяПользователя.имяПользователя <br /> Пароль: любой</li>
+						<li><strong>F2Pool</strong> <input class="selectMe" value="hns.f2pool.com" readonly="readonly" size=14 /> порт: <input class="selectMe" value="6000" readonly="readonly" size=4 /> <br />Имя пользователя: Адрес.имяПользователя <br /> Пароль: любой</li>
+						<li><strong>HNSPool</strong> <input class="selectMe" value="stratum+tcp://stratum-us.hnspool.com" readonly="readonly" size=23 /> порт: <input class="selectMe" value="3001" readonly="readonly" size=4 /> <br />Имя пользователя: зарегистрированноеИмяПользователя <br /> Пароль: Зарегистрированный пароль</li>
 					</ul>
 				</li>
 			</ul>
