--- a/content_fr.html
+++ b/content_fr.html
@@ -28,9 +28,9 @@
 				<li>
 					<strong>Hébergeurs de Pool:</strong>
 					<ul>
-						<li><strong>dxpool</strong> <input class="selectMe" value="hns.ss.dxpool.com" readonly="readonly" size=17 /> port: <input class="selectMe" value="3008" readonly="readonly" size=4 /> <br />identifiant: registered_username.workerName <br /> mot de passe: anything</li>
-						<li><strong>f2pool</strong> <input class="selectMe" value="hns.f2pool.com" readonly="readonly" size=14 /> port: <input class="selectMe" value="6000" readonly="readonly" size=4 /> <br />identifiant: adresse.NomduMineur <br /> mot de passe: au choix </li>
-						<li><strong>hnspool</strong> <input class="selectMe" value="stratum-us.hnspool.com" readonly="readonly" size=23 /> port: <input class="selectMe" value="3001" readonly="readonly" size=4 /> <br />identifiant: NomUtilisateurInscrit <br /> mot de passe: MotdePasseInscrit</li>
+						<li><strong>DXPool</strong> <input class="selectMe" value="hns.ss.dxpool.com" readonly="readonly" size=17 /> port: <input class="selectMe" value="3008" readonly="readonly" size=4 /> <br />identifiant: registered_username.workerName <br /> mot de passe: anything</li>
+						<li><strong>F2Pool</strong> <input class="selectMe" value="hns.f2pool.com" readonly="readonly" size=14 /> port: <input class="selectMe" value="6000" readonly="readonly" size=4 /> <br />identifiant: adresse.NomduMineur <br /> mot de passe: au choix </li>
+						<li><strong>HNSPool</strong> <input class="selectMe" value="stratum+tcp://stratum-us.hnspool.com" readonly="readonly" size=23 /> port: <input class="selectMe" value="3001" readonly="readonly" size=4 /> <br />identifiant: NomUtilisateurInscrit <br /> mot de passe: MotdePasseInscrit</li>
 					</ul>
 				</li>
 			</ul>
